Finished with reponsive layouts, but encountered a bug with the menu causing whitespace on the right side of mobile viewport

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -511,6 +511,16 @@ button {
   cursor: pointer;
 }
 
+@media screen and (max-width: 94em) {
+  .header-subtitle-contact {
+    font-size: 4rem;
+  }
+}
+@media screen and (max-width: 56.25em) {
+  .header-subtitle-contact {
+    font-size: 2.25rem;
+  }
+}
 .header-subtitle-checkout {
   position: absolute;
   top: 62%;
